# euclid-pipeline-hooks

./: .gitignore  .justfile  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  setup.cfg  tox.ini
euclid_pipeline_hooks/: dependency_version_fixer.py  dependency_version_fixer2.py
