[metadata]
name = euclid_pipeline_hooks
version = 1.0.0
description = pre-commit hooks for the Euclid pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
author = Hubert Degaudenzi
author_email = Hubert.Degaudenzi@unige.ch
license = LGPL-2
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    dependency-version-fixer = euclid_pipeline_hooks.dependency_version_fixer:main

[bdist_wheel]
universal = True
