[metadata]
name = euclid_pipeline_hooks
version = 1.0.4
description = pre-commit hooks for the Euclid pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
author = Hubert Degaudenzi
author_email = Hubert.Degaudenzi@unige.ch
license = LGPL-3.0
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    GitPython
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    dependency-version-fixer = euclid_pipeline_hooks.dependency_version_fixer:main
    dependency-version-fixer2 = euclid_pipeline_hooks.dependency_version_fixer2:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
